@@ -10,7 +10,7 @@ import java.util.concurrent.TimeUnit;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.infra.Blackhole;
 
-@Fork(1)
+@Fork(value = 1, jvmArgsAppend = {"--enable-preview"})
 @Warmup(iterations = 3, time = 1)
 @Measurement(iterations = 5, time = 3)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
